# repyh_distributed_dna

./: Cargo.toml  README.md  run_cluster.sh  tester.sh
client/: Cargo.toml
client/src/: client_sender.rs  dna_client.rs  main.rs
conf/: ips0.json  ips1.json  ips2.json  ips3.json  ips4.json
p2p_dna/: Cargo.toml
p2p_dna/src/: main.rs
src/: main.rs  node.rs  sender.rs  server.rs  user.rs
src/api/: dna_sequence.rs  mod.rs  public_key.rs
src/model/: dna_sequence.rs  mod.rs  patch.rs  public_key.rs
src/repository/: db.rs
var/: dna0.db  dna1.db  dna2.db  dna3.db  dna4.db  dna{i}.db
