[package]
name = "Repyh"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
] }
serde = { version = "1.0.210", features = ['derive'] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.128"
thiserror = "1.0"
base64 = "0.21.0"
rusqlite = "0.28.0"
ring = "0.17.8"
rand = "0.8.5"
chrono = "0.4.38"
sha2 = "0.10.6"
uuid = {version = "1.10.0", features = ["v4", "serde"]}
derive_more = "^0.99"
futures = "0.3.5"
actix-rt = "2.10.0"
actix-web = "4.9.0"
reqwest = {version = "0.12.4", features = ["json"]}
diff-match-patch-rs = "0.3.0"

