[package]
name = "Client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.4", features = ["json"]}
tokio = {version = "1.37.0", features = ["full"]}
tracing-subscriber = {version = "0.3", features = [
  "env-filter",
  "fmt",
  "tracing-log",
  "json",
  "tracing",
]}
derive_more = "^0.99"
thiserror = "1.0"
base64 = "0.21.0"
ring = "0.17.8"
scraper = "0.19.0"
json = "0.12.4"
tracing = "0.1"
