[package]
name = "p2p_dna"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.41.1", features = ["full"] }
async-trait = "0.1"
libp2p = { version = "0.52", features = [
	"kad",
	"mdns",
	"tokio",
	"tcp", 
	"tls", 
	"dns", 
	"async-std", 
	"noise", 
	"yamux", 
	"websocket", 
	"ping", 
	"macros"
]}
futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

